<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E6E6"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="204dp"
        android:layout_height="230dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/imagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_name"
        android:textColor="#F74E51"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
        tools:text="CodeNative" />

    <TextView
        android:id="@+id/tvIntroText"
        android:layout_width="300dp"
        android:layout_height="132dp"
        android:layout_marginTop="44dp"
        android:text="@string/textoIntroductorio"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppName" />

    <Button
        android:id="@+id/button"
        android:layout_width="217dp"
        android:layout_height="62dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/boton_main"
        android:onClick="gotToLogin"
        android:text="@string/comienza"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/boton"
        android:textSize="34sp"
        app:iconTint="#F74E51"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIntroText"
        app:strokeColor="#F74E51" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:text="@string/registro"
        android:textColor="#F74E51"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
