<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E6E6"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="105dp"
        android:layout_height="127dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/AppName"
        app:layout_constraintHorizontal_bias="0.651"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imagen" />

    <TextView
        android:id="@+id/AppName"
        android:layout_width="259dp"
        android:layout_height="69dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_name"
        android:textColor="#F74E51"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDesciption"
        android:layout_width="354dp"
        android:layout_height="59dp"
        android:fontFamily="serif"
        android:text="@string/texto_bienvenida_login"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/contraseña_usuario_login2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_login"
        app:layout_constraintVertical_bias="0.605" />

    <ImageView
        android:id="@+id/imageUsers"
        android:layout_width="77dp"
        android:layout_height="111dp"
        android:layout_marginBottom="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/iconos"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/contraseña_usuario_login"
        style="@style/EditTextRounded"
        android:layout_width="292dp"
        android:layout_height="53dp"
        android:layout_marginBottom="384dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contraseña_usuario_login2"
        app:layout_constraintVertical_bias="0.084" />

    <EditText
        android:id="@+id/contraseña_usuario_login2"
        style="@style/EditTextRounded"
        android:layout_width="292dp"
        android:layout_height="53dp"
        android:layout_marginBottom="556dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="222dp"
        android:layout_height="67dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="304dp"
        android:backgroundTint="@color/boton_main"
        android:text="@string/ingresar"
        android:textAlignment="center"
        android:textColor="@color/boton"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/contraseña_usuario_login"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="@color/boton"
        app:strokeWidth="3dp" />

    <TextView
        android:id="@+id/textResetPassword"
        android:layout_width="269dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:text="@string/resetPasswordLabel"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        app:layout_constraintVertical_bias="0.03" />

    <Button
        android:id="@+id/buttonGoogle"
        android:layout_width="357dp"
        android:layout_height="84dp"
        android:layout_margin="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="88dp"
        android:backgroundTint="@color/boton"
        android:drawableStart="@drawable/google"
        android:text="@string/ingresa_google"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:cornerRadius="15dp"
        app:icon="@drawable/google"
        app:iconSize="50sp"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textResetPassword"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.867"
        app:strokeColor="@color/boton_main"
        app:strokeWidth="3dp" />

    <TextView
        android:id="@+id/sin_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sin_cuenta"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGoogle"
        app:layout_constraintVertical_bias="0.311" />

    <TextView
        android:id="@+id/textRegistrologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/registro"
        android:textColor="#F74E51"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.402"
        app:layout_constraintStart_toEndOf="@+id/sin_cuenta"
        app:layout_constraintTop_toBottomOf="@+id/buttonGoogle"
        app:layout_constraintVertical_bias="0.138" />

</androidx.constraintlayout.widget.ConstraintLayout>